--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@ const Species = [
     id: 'cibarius',
     name: 'Girolle',
     power: 'Serviteur parasite',
-    desc: 'Peut capturer un parasite et le transforme temporairement en allié collecteur.',
+    desc: "Peut capturer un parasite et le transforme temporairement en allié collecteur.",
     color: '#e6a100',
     draw: drawChanterelle,
     use: (me) => {
@@ -595,7 +595,7 @@ const Species = [
     id: 'edulis',
     name: 'Cèpe',
     power: 'Robustesse',
-    desc: 'Encaisse un coup sans perdre de vie et repousse l’ennemi en cascade.',
+    desc: "Encaisse un coup sans perdre de vie et repousse l’ennemi en cascade.",
     color: '#7a4f2a',
     draw: drawCep,
     use: (me) => { me.powerTimer=360; me.shield=true; }
@@ -605,7 +605,7 @@ const Species = [
     id: 'morchella',
     name: 'Morille',
     power: 'Spores du chaos',
-    desc: 'Libère des spores qui désorientent les parasites et troublent l’adversaire.',
+    desc: "Libère des spores qui désorientent les parasites et troublent l’adversaire.",
     color: '#6a4f2f',
     draw: drawMorel,
     use: (me) => {
@@ -643,7 +643,7 @@ const Species = [
     id: 'phalloides',
     name: 'Amanite phalloïde',
     power: 'Phase mycélienne',
-    desc: 'Peut traverser une rangée d'arbres (mur intérieur du labyrinthe).',
+    desc: "Peut traverser une rangée d'arbres (mur intérieur du labyrinthe).",
     color: '#7a8b4b',
     draw: drawPhalloides,
     use: (me) => {
